BACKLOG-21557: Fix z-index (#1038)

--- a/src/javascript/JContent/EditFrame/Box.scss
+++ b/src/javascript/JContent/EditFrame/Box.scss
@@ -1,6 +1,6 @@
 .root {
     position: absolute;
-    z-index: 1200;
+    z-index: 15000;
 
     pointer-events: none;
 }
@@ -41,7 +41,7 @@
     position: absolute;
     bottom: 0;
 
-    z-index: 18000;
+    z-index: 15000;
 
     display: flex;
 
@@ -145,7 +145,7 @@
 }
 
 .selected {
-    z-index: 1200;
+    z-index: 15000;
 
     border: 2px solid var(--color-accent);
     border-radius: 4px;
@@ -153,7 +153,7 @@
 }
 
 .current {
-    z-index: 13000;
+    z-index: 18000;
 
     border: 2px solid var(--color-gray);
     border-radius: 4px;
